<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activities.SignInActivity">

    <include layout="@layout/toolbarsignin">

    </include>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:id="@+id/emaillayout"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="#2B2B2B"
            android:textColorHint="#BDB5B5"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailedittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/email"
                android:background="#2B2B2B"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="#FFF"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:id="@+id/passwordlayout"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="#2B2B2B"
            android:textColorHint="#BDB5B5"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="150dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:background="#2B2B2B"
                android:padding="10dp"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:textColorHint="#FFF"
                android:textSize="20sp">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonsignin"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_stroke"
            android:text="@string/sign_in"
            android:textColor="#FFFEFE"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordlayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordlayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordlayout">

        </Button>

        <TextView
            android:id="@+id/forgotpasswordtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/forgot_password"
            android:textColor="#A8A6A6"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordlayout"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/passwordlayout"
            app:layout_constraintTop_toBottomOf="@+id/buttonsignin">

        </TextView>

        <TextView
            android:id="@+id/signuptextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/new_to_netflix_sign_up"
            android:textColor="#A8A6A6"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/forgotpasswordtextview"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@id/forgotpasswordtextview"
            app:layout_constraintTop_toBottomOf="@id/forgotpasswordtextview">

        </TextView>

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="51dp"
            android:layout_height="76dp"
            android:layout_marginBottom="76dp"
            android:theme="@style/AppTheme.Custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </ProgressBar>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>